# SLIDEM

./: .gitignore  CHANGES  CMakeLists.txt  IRI2016-License.txt  LICENSES  README.md  SLIDEM_bibliography.bib  TODO  calculate_diplatitude.c  calculate_diplatitude.h  calculate_products.c  calculate_products.h  calion.c  calion.h  cdf_attrs.c  cdf_attrs.h  cdf_vars.c  cdf_vars.h  downsample.c  downsample.h  export_products.c  export_products.h  f107.c  f107.h  getF107.sh  getTestFiles.sh  interpolate.c  interpolate.h  ioncomposition.c  ioncomposition.h  iri2016util.c  iri2016util.h  load_inputs.c  load_inputs.h  load_satellite_velocity.c  load_satellite_velocity.h  main.c  main.h  modified_oml.c  modified_oml.h  (+11 more)
CMake/: FindGSL.cmake
Docker/: Dockerfile  docker-build.sh
util/: CMakeLists.txt
util/missingFiles/: CMakeLists.txt  main.c
util/printSortedVar/: CMakeLists.txt  debugging_commands.txt  main.c
util/slidemParallel/: CMakeLists.txt  main.c
util/slidembin/: CMakeLists.txt  slidembin.c  slidembin.h  statistics.c  statistics.h
